--- a/_config.yml
+++ b/_config.yml
@@ -37,6 +37,9 @@ plugins:
 # Google Analytics
 google_analytics: UA-168691021-1
 
+disqus:
+    shortname: zhangyuting.disqus.com
+
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
