Update disqus config

--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: "zhangyuting.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: zhangyuting
 github_username:  zhangyuting
 
@@ -38,7 +38,7 @@ plugins:
 google_analytics: UA-168691021-1
 
 disqus:
-    shortname: zhangyuting
+    shortname: zhangyuting-github-pages
 
 # Exclude from processing.
 # The following items will not be processed, by default.
