Update twitter link

--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   stories and ideas as well.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://zhangyuting.github.io" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: zhangyuting
+twitter_username: zhangyutingzyt
 github_username:  zhangyuting
 
 author: "Yuting Zhang"
